Added second window

--- a/Lab2.csproj
+++ b/Lab2.csproj
@@ -73,6 +73,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="DifferentWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -85,8 +89,14 @@
     <Compile Include="DataSource\DangerExcelManager.cs" />
     <Compile Include="DataSource\ExcelManager.cs" />
     <Compile Include="DataSource\IDSManager.cs" />
+    <Compile Include="DifferentWindow.xaml.cs">
+      <DependentUpon>DifferentWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\ChangedObject.cs" />
     <Compile Include="Entities\Danger.cs" />
     <Compile Include="DAO\IDao.cs" />
+    <Compile Include="Entities\DangerListComparator.cs" />
+    <Compile Include="Entities\IListComparator.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
