--- a/VigenereCipher/Properties/launchSettings.json
+++ b/VigenereCipher/Properties/launchSettings.json
@@ -21,12 +21,17 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Application START": {
+    "WebApplication228": {
       "commandName": "IIS",
       "launchBrowser": true,
+      "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "newProfile1": {
+      "commandName": "Executable"
     }
   }
 }
