--- a/VigenereCipher/Properties/launchSettings.json
+++ b/VigenereCipher/Properties/launchSettings.json
@@ -21,7 +21,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "WebApplication228": {
+    "Application START": {
       "commandName": "IIS",
       "launchBrowser": true,
       "launchUrl": "api/values",
@@ -29,9 +29,6 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
-    },
-    "newProfile1": {
-      "commandName": "Executable"
     }
   }
 }
